# lele-rs

./: Cargo.toml  _useful_cmds.txt  lele.sublime-project  lele.sublime-workspace
.templates/: tests.enhanced-sublime-snippet
apps/toy_p2p/: Cargo.toml
apps/toy_p2p/src/: main.rs
apps/worshop-01-Identity-and-Swarm/: Cargo.toml
lessons/w01/: Cargo.toml
lessons/w01/src/: main.rs
libs/p2p/: Cargo.toml
libs/p2p/src/: lib.rs  std_async_tests.rs  w01_indentity_and_swarm.rs
libs/tests/: Cargo.toml
libs/tests/src/: define_mtg_game.rs  lib.rs  test_from_into.rs
libs/verdigris/: Cargo.toml
libs/verdigris/_helper_dir/cards_json/: Azorius Signet.json  Battering Ram.json  Osteomancer Adept.json  Ripscale Predator.json  Trivia Contest.json
libs/verdigris/_old/: Game.rs  TurnStructure.rs  Zone.rs  glossary.rs  mana.rs  mtg_oracle_parser.rs  mtg_parse_oracle.rs  test_1.rs  test_2.rs
libs/verdigris/_old/pest/: mtg_parser.rs
libs/verdigris/_old/pest_ast/: mtg_grammar.pest  mtg_oracle_parser.rs
libs/verdigris/src/: Card.rs  SpecialActions.rs  activated_abilities.rs  costs.rs  effects.rs  lib.rs  mtg_oracle_parser.rs  parse_rule_text.rs  parse_symbol.rs  rules.rs  symbols.rs  targets.rs
