[workspace]
members = [
    "apps/toy_p2p",
    "apps/worshop-01-Identity-and-Swarm", 

    "libs/p2p",
    "libs/subprocess",
    "libs/verdigris",
    
    "lessons/w01",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["lele"]
license = "MIT OR Apache-2.0"


[workspace.dependencies]
futures = "0.3"
libp2p = { version = "0.55.0" , features = ["identify", "noise", "ping", "tcp", "yamux", "macros", "async-std"] }
# serde = { version = "1.0", features = ["derive"] }
thiserror = "2"


[workspace.lints.clippy]
pedantic = "warn"

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"
# rustdocflags = ["-Clinker=rust-lld.exe"]
# rustflags = [
#   "-Zshare-generics=n", # This needs to be off if you use dynamic linking on Windows
#   "-Zthreads=0",
# ]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

