[package]
name = "verdigris"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
winnow = { version = "0.7.13" }
# pest = { version = "2.8.3" }
# pest_derive = { version = "2.8.3" }
# pest-ast = { version = "0.3.6" }
# from-pest = { version = "0.3.4" }

[lints]
workspace = true
