[package]
name = "verdigris"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
winnow = { version = "0.7.13" }
derive_more = { version = "2", features = ["from"] }
bevy = { version = "0.16", features = ["dynamic_linking"] }

[lints]
workspace = true

